--- a/index.html
+++ b/index.html
@@ -1,21 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Pop-Up Example</title>
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Your Title">
-<meta name="twitter:description" content="Your Description">
-<meta name="twitter:image" content="https://your-site.com/image.jpg">
-  <script>
-    function openPopup() {
-      window.open("https://example.com", "PopupWindow", "width=400,height=300");
-alert("Your message here");
-
-
-    }
-  </script>
-</head>
-<body>
-  <button onclick="openPopup()">Click for Pop-Up</button>
-</body>
-</html>
+<h1>Hello!</h1>
