--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Pop-Up Example</title>
+  <title>Music4Every1</title>
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Hello">
 <meta name="twitter:description" content="mygsite">
-<meta name="twitter:image" content="https://av971978.github.io/rtest001/image1.jpg">
+<meta name="twitter:image" content="https://av971978.github.io/rtest001/m4e1.gif">
 
 </head>
 <body>
